[gd_scene load_steps=4 format=3 uid="uid://bfbgquwdr324x"]

[ext_resource type="Script" path="res://scripts/Inventario/inventario_iu.gd" id="1_fskj8"]
[ext_resource type="Texture2D" uid="uid://bfjod85nvg0xx" path="res://aceets/fundo.png" id="2_u1j1t"]
[ext_resource type="PackedScene" uid="uid://c67i8gdtaci5l" path="res://cenas/slot_ui.tscn" id="4_5hc11"]

[node name="Inventario_Iu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 250.0
offset_top = -20.0
offset_right = 250.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fskj8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
offset_left = 34.0
offset_top = 893.0
offset_right = 811.0
offset_bottom = 1047.0
texture = ExtResource("2_u1j1t")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.0
offset_top = -1.0
offset_right = -81.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
theme_override_constants/h_separation = 39
theme_override_constants/v_separation = 39
columns = 6

[node name="slot1" parent="CanvasLayer/NinePatchRect/GridContainer" instance=ExtResource("4_5hc11")]
layout_mode = 2

[node name="slot2" parent="CanvasLayer/NinePatchRect/GridContainer" instance=ExtResource("4_5hc11")]
layout_mode = 2

[node name="slot3" parent="CanvasLayer/NinePatchRect/GridContainer" instance=ExtResource("4_5hc11")]
layout_mode = 2

[node name="slot4" parent="CanvasLayer/NinePatchRect/GridContainer" instance=ExtResource("4_5hc11")]
layout_mode = 2

[node name="slot5" parent="CanvasLayer/NinePatchRect/GridContainer" instance=ExtResource("4_5hc11")]
layout_mode = 2

[node name="frente" type="Button" parent="CanvasLayer"]
offset_left = 820.0
offset_top = 910.0
offset_right = 911.0
offset_bottom = 941.0
text = "frente"

[node name="tras" type="Button" parent="CanvasLayer"]
offset_left = 818.0
offset_top = 990.0
offset_right = 909.0
offset_bottom = 1021.0
text = "tras"

[node name="InfoArma" type="NinePatchRect" parent="CanvasLayer"]
offset_left = 923.0
offset_top = 906.0
offset_right = 1277.0
offset_bottom = 1032.0
texture = ExtResource("2_u1j1t")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="ControleExibicao" type="Control" parent="CanvasLayer/InfoArma"]
anchors_preset = 0
offset_left = 214.0
offset_top = -782.0
offset_right = 254.0
offset_bottom = -742.0

[node name="NomeArma" type="Label" parent="CanvasLayer/InfoArma/ControleExibicao"]
layout_mode = 2
offset_left = -203.0
offset_top = 786.0
offset_right = -87.0
offset_bottom = 861.0
text = "
 "

[node name="status" type="GridContainer" parent="CanvasLayer/InfoArma/ControleExibicao"]
layout_mode = 0
offset_left = -201.0
offset_top = 816.0
offset_right = 221.0
offset_bottom = 902.0
columns = 2

[node name="Dano_" type="Label" parent="CanvasLayer/InfoArma/ControleExibicao/status"]
layout_mode = 2
text = "Dano:"

[node name="Dano" type="Label" parent="CanvasLayer/InfoArma/ControleExibicao/status"]
layout_mode = 2
text = "50"

[node name="Speed_" type="Label" parent="CanvasLayer/InfoArma/ControleExibicao/status"]
layout_mode = 2
text = "Speed:"

[node name="Speed" type="Label" parent="CanvasLayer/InfoArma/ControleExibicao/status"]
layout_mode = 2
text = "50"

[node name="pen_" type="Label" parent="CanvasLayer/InfoArma/ControleExibicao/status"]
layout_mode = 2
text = "penetra√ßao: "

[node name="pen" type="Label" parent="CanvasLayer/InfoArma/ControleExibicao/status"]
layout_mode = 2
text = "50"

[node name="GridLvl" type="GridContainer" parent="CanvasLayer/InfoArma"]
layout_mode = 0
offset_left = 279.0
offset_top = 8.0
offset_right = 346.0
offset_bottom = 58.0
columns = 2

[node name="ninvel_" type="Label" parent="CanvasLayer/InfoArma/GridLvl"]
layout_mode = 2
text = "Nivel:"

[node name="nivel" type="Label" parent="CanvasLayer/InfoArma/GridLvl"]
layout_mode = 2
text = "50"

[node name="Fechar" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="pressed" from="CanvasLayer/frente" to="." method="_on_reorganizar_pressed"]
[connection signal="pressed" from="CanvasLayer/tras" to="." method="_on_tras_pressed"]
[connection signal="timeout" from="Fechar" to="." method="_on_fechar_timeout"]
